--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,34 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Cache files
+*.cache
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual environments
+.venv/
+.env/
+
+# VS Code settings
+.vscode/
+*.code-workspace
+
+# PyCharm settings
+.idea/
+*.iml
+
+.env.*
+*.env
+
+*.sqlite3
+*.db
+
+# Test outputs
+coverage/
+.cache/
+
+# Mac OS
+.DS_Store
