--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,4 @@
-asttokens==2.4.1
-fastjsonschema==2.20.0
 Flask==3.0.3
-ipython==8.12.3
-itsdangerous==2.2.0
-Jinja2==3.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-Pygments==2.18.0
-PyJWT==2.9.0
-python-dateutil==2.9.0.post0
-pyzmq==26.2.0
-referencing==0.35.1
-requests==2.32.3
 SQLAlchemy==2.0.36
-stack-data==0.6.3
 Werkzeug~=3.0.6
+python-dotenv~=1.0.1
